--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Sheldon Rice
 email: vigilantbag2018@protonmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A personal portfolio
-baseurl: "/" # the subpath of your site, e.g. /blog
+#baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://vigilantbag.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  VigilantBag
 
