--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Sheldon Rice
 email: vigilantbag2018@protonmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A personal portfolio
-#baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://vigilantbag.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: ""
+url: "https://vigilantbag.github.io"
 github_username:  VigilantBag
 
 # Build settings
