--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Sheldon Rice
 subtitle: A portfolio
 email: vigilantbag2018@protonmail.com
-baseurl: 
+baseurl: /
 author:
 city: Channel Islands
 state: CA
