--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # site settings
 title: Sheldon Rice
-subtitle: A portfolio
+subtitle: Hacker and Developer
 email: vigilantbag2018@protonmail.com
 absolute_url: "" 
 author:
