--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@ subtitle: Hacker and Developer
 email: vigilantbag2018@protonmail.com
 absolute_url: "" 
 author:
-city: Channel Islands
-state: CA
-phone: (716) 555-5555
+city: View Submitted Resume
+state: AR
+phone: View Submitted Resume
 url: https://www.vigilantbag.com
 # homepage tiles
 tiles-source: pages # accepts "posts" or "pages"
