Update email address

--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # site settings
 title: Sheldon Rice
 subtitle: Hacker and Developer
-email: vigilantbag2018@protonmail.com
+email: sheldon.rice@vigilantbag.com
 absolute_url: "" 
 author:
 city: View Submitted Resume
-state: AR
+state: FL
 phone: View Submitted Resume
 url: https://www.vigilantbag.com
 # homepage tiles
